Move statistics.hh in common "include" directory
The header (just like random.hh, which will follow soon the same fate)
is meant to be used by the programs in every exercise, so in order to
avoid copying the file in every directory each time it is modified it
has been placed in a common directory at the root of the project.
The code for exercise 1.1, on which the new function was tested,
was edited to reflect this new directory structure.

--- a/exercise01/exercise01-1/makefile
+++ b/exercise01/exercise01-1/makefile
@@ -1,10 +1,12 @@
 CC = g++
-CFLAGS = -Wall -O3 --std=c++11
+SRCDIR = ../..
+INCLUDE = $(SRCDIR)/include
+CFLAGS = -Wall -O3 --std=c++11 -I$(INCLUDE)
 
-exercise01-1: exercise01-1.o random.o statistics.hh
+exercise01-1: exercise01-1.o random.o $(INCLUDE)/statistics.hh
 	$(CC) random.o exercise01-1.o -o exercise01-1
 
-exercise01-1.o: exercise01-1.cc statistics.hh
+exercise01-1.o: exercise01-1.cc $(INCLUDE)/statistics.hh
 	$(CC) -c exercise01-1.cc -o exercise01-1.o $(CFLAGS)
 
 random.o: random.cc random.hh
