Rewrite code to use shared statistics.hh header
The code for all programs was rewritten in order to use the
statistics.hh header in the common include/ directory at the root of the
project.
Old instances of the "block_statistics" function were replaced with the
new ones, and makefiles were updated to track changes of this header.

--- a/exercise01/exercise01-2/makefile
+++ b/exercise01/exercise01-2/makefile
@@ -1,14 +1,16 @@
 CC = g++
-CFLAGS = -Wall -O3 --std=c++11
+SRCDIR = ../..
+INCLUDE = $(SRCDIR)/include
+CFLAGS = -Wall -O3 --std=c++11 -I$(INCLUDE)
+EXNAME = exercise01-2
 
-exercise01-2: exercise01-2.o random.o
-	$(CC) random.o exercise01-2.o -o exercise01-2
+.PHONY: clean
 
-exercise01-2.o: exercise01-2.cc
-	$(CC) -c exercise01-2.cc -o exercise01-2.o $(CFLAGS)
+%.o: %.cc
+	$(CC) $(CFLAGS) -c $< -o $@
 
-random.o: random.cc random.hh
-	$(CC) -c random.cc -o random.o $(CFLAGS)
+$(EXNAME): $(EXNAME).o random.o
+	$(CC) $^ -o $@
 
 clean:
-	rm *.o exercise01-2 seed.out
+	rm *.o $(EXNAME) seed.out
