--- a/exercise01/exercise01-3/makefile
+++ b/exercise01/exercise01-3/makefile
@@ -1,14 +1,16 @@
 CC = g++
-CFLAGS = -Wall -O3 --std=c++11
+SRCDIR = ../..
+INCLUDE = $(SRCDIR)/include
+CFLAGS = -Wall -O3 --std=c++11 -I$(INCLUDE)
+EXNAME = exercise01-3
 
-exercise01-3: exercise01-3.o random.o
-	$(CC) random.o exercise01-3.o -o exercise01-3
+.PHONY: clean
 
-exercise01-3.o: exercise01-3.cc
-	$(CC) -c exercise01-3.cc -o exercise01-3.o $(CFLAGS)
+%.o: %.cc
+	$(CC) $(CFLAGS) -c $< -o $@
 
-random.o: random.cc random.hh
-	$(CC) -c random.cc -o random.o $(CFLAGS)
+$(EXNAME): $(EXNAME).o random.o $(INCLUDE)/statistics.hh
+	$(CC) $^ -o $@
 
 clean:
-	rm *.o exercise01-3 seed.out
+	rm *.o $(EXNAME) seed.out
