--- a/exercise03/exercise03-1/makefile
+++ b/exercise03/exercise03-1/makefile
@@ -1,14 +1,16 @@
 CC = g++
-CFLAGS = -Wall -O3 --std=c++11
+SRCDIR = ../..
+INCLUDE = $(SRCDIR)/include
+CFLAGS = -Wall -O3 --std=c++11 -I$(INCLUDE)
+EXNAME = exercise03-1
 
-exercise03-1: exercise03-1.o random.o
-	$(CC) random.o exercise03-1.o -o exercise03-1
+.PHONY: clean
 
-exercise03-1.o: exercise03-1.cc
-	$(CC) -c exercise03-1.cc -o exercise03-1.o $(CFLAGS)
+%.o: %.cc
+	$(CC) $(CFLAGS) -c $< -o $@
 
-random.o: random.cc random.hh
-	$(CC) -c random.cc -o random.o $(CFLAGS)
+$(EXNAME): $(EXNAME).o random.o $(INCLUDE)/statistics.hh
+	$(CC) $^ -o $@
 
 clean:
-	rm *.o exercise03-1 seed.out
+	rm *.o $(EXNAME) seed.out
