--- a/exercise07/exercise07-1/makefile
+++ b/exercise07/exercise07-1/makefile
@@ -1,9 +1,15 @@
 CC = g++
-CFLAGS = -Wall -O3 --std=c++11
+SRCDIR = ../..
+INCLUDE = $(SRCDIR)/include
+CFLAGS = -Wall -O3 --std=c++11 -I$(INCLUDE)
+EXNAME = exercise07-1
 
 .PHONY: clean
 
-exercise07-1: exercise07-1.o metropolis_NVT.o random.o
+%.o: %.cc
+	$(CC) $(CFLAGS) -c $< -o $@
+
+$(EXNAME): $(EXNAME).o random.o metropolis_NVT.o
 	$(CC) $^ -o $@
 
 warmup_analysis: warmup_analysis.o metropolis_NVT.o random.o
