--- a/exercise02/exercise02-2/makefile
+++ b/exercise02/exercise02-2/makefile
@@ -1,14 +1,16 @@
 CC = g++
-CFLAGS = -Wall -O3 --std=c++11
+SRCDIR = ../..
+INCLUDE = $(SRCDIR)/include
+CFLAGS = -Wall -O3 --std=c++11 -I$(INCLUDE)
+EXNAME = exercise02-2
 
-exercise02-2: exercise02-2.o random.o
-	$(CC) random.o exercise02-2.o -o exercise02-2
+.PHONY: clean
 
-exercise02-2.o: exercise02-2.cc
-	$(CC) -c exercise02-2.cc -o exercise02-2.o $(CFLAGS)
+%.o: %.cc
+	$(CC) $(CFLAGS) -c $< -o $@
 
-random.o: random.cc random.hh
-	$(CC) -c random.cc -o random.o $(CFLAGS)
+$(EXNAME): $(EXNAME).o random.o
+	$(CC) $^ -o $@
 
 clean:
-	rm *.o exercise02-2 seed.out
+	rm *.o $(EXNAME) seed.out
