--- a/exercise08/exercise08-2/makefile
+++ b/exercise08/exercise08-2/makefile
@@ -1,16 +1,19 @@
 CC = g++
-CFLAGS = -Wall -O3 --std=c++11
+SRCDIR = ../..
+INCLUDE = $(SRCDIR)/include
+CFLAGS = -Wall -O3 --std=c++11 -I$(INCLUDE)
+EXNAME = exercise08-2
 
 .PHONY: clean
-
-exercise08-2: exercise08-2.o random.o
-	$(CC) $^ -o $@
-
-exercise08-2-grid: exercise08-2-grid.o random.o
-	$(CC) $^ -o $@
 
 %.o: %.cc
 	$(CC) $(CFLAGS) -c $< -o $@
 
+$(EXNAME): $(EXNAME).o random.o $(INCLUDE)/statistics.hh
+	$(CC) $^ -o $@
+
+$(EXNAME)-grid: $(EXNAME)-grid.o random.o $(INCLUDE)/statistics.hh
+	$(CC) $^ -o $@
+
 clean:
-	rm *.o exercise08-2 exercise08-2-grid seed.out
+	rm *.o $(EXNAME) seed.out
