--- a/exercise09/makefile
+++ b/exercise09/makefile
@@ -1,13 +1,16 @@
 CC = g++
-CFLAGS = -Wall -O3 --std=c++11
+SRCDIR = ..
+INCLUDE = $(SRCDIR)/include
+CFLAGS = -Wall -O3 --std=c++11 -I$(INCLUDE)
+EXNAME = exercise09
 
 .PHONY: clean
-
-exercise09: exercise09.o random.o
-	$(CC) $^ -o $@
 
 %.o: %.cc
 	$(CC) $(CFLAGS) -c $< -o $@
 
+$(EXNAME): $(EXNAME).o random.o
+	$(CC) $^ -o $@
+
 clean:
-	rm *.o exercise09 seed.out
+	rm *.o $(EXNAME) seed.out
