Move "random" class definition to shared folder
Instead of each exercise containing a copy of the header and
implementation files, the code structure was refactored in order to use
a single .hh and .cc file, stored in a shared folder.
This makes propagating the changes to every program, if one should
change the definition of the class in some way, totally effortless.

--- a/exercise02/exercise02-1/makefile
+++ b/exercise02/exercise02-1/makefile
@@ -9,7 +9,7 @@ EXNAME = exercise02-1
 %.o: %.cc
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(EXNAME): $(EXNAME).o random.o $(INCLUDE)/statistics.hh
+$(EXNAME): $(EXNAME).o $(INCLUDE)/random.o $(INCLUDE)/statistics.hh
 	$(CC) $^ -o $@
 
 clean:
