--- a/exercise06/makefile
+++ b/exercise06/makefile
@@ -9,7 +9,7 @@ EXNAME = exercise06
 %.o: %.cc
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(EXNAME): $(EXNAME).o random.o ising_1d_sim.o $(INCLUDE)/statistics.hh
+$(EXNAME): $(EXNAME).o $(INCLUDE)/random.o ising_1d_sim.o $(INCLUDE)/statistics.hh
 	$(CC) $^ -o $@
 
 clean:
