--- a/exercise07/exercise07-2/makefile
+++ b/exercise07/exercise07-2/makefile
@@ -9,7 +9,7 @@ EXNAME = exercise07-2
 %.o: %.cc
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(EXNAME): $(EXNAME).o random.o metropolis_NVT.o $(INCLUDE)/statistics.hh
+$(EXNAME): $(EXNAME).o $(INCLUDE)/random.o metropolis_NVT.o $(INCLUDE)/statistics.hh
 	$(CC) $^ -o $@
 
 clean:
