--- a/exercise10/exercise10-2/makefile
+++ b/exercise10/exercise10-2/makefile
@@ -9,7 +9,7 @@ EXNAME = exercise10-2
 %.o: %.cc
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(EXNAME): $(EXNAME).o random.o
+$(EXNAME): $(EXNAME).o $(INCLUDE)/random.o
 	$(CC) $^ -o $@
 
 clean:
