--- a/exercise01/exercise01-1/makefile
+++ b/exercise01/exercise01-1/makefile
@@ -9,7 +9,7 @@ EXNAME = exercise01-1
 %.o: %.cc
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(EXNAME): $(EXNAME).o random.o $(INCLUDE)/statistics.hh
+$(EXNAME): $(EXNAME).o $(INCLUDE)/random.o $(INCLUDE)/statistics.hh
 	$(CC) $^ -o $@
 
 clean:
