[7] Add default goal to makefile

--- a/exercise07/exercise07-4/makefile
+++ b/exercise07/exercise07-4/makefile
@@ -4,7 +4,8 @@ INCLUDE = $(SRCDIR)/include
 CFLAGS = -Wall -O3 --std=c++11 -I$(INCLUDE)
 EXNAME = exercise07-4
 
-.PHONY: clean
+.PHONY: clean, all
+.DEFAULT_GOAL := all
 
 %.o: %.cc
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -15,5 +16,7 @@ $(EXNAME)_verlet: $(EXNAME)_verlet.o $(INCLUDE)/random.o molecular_dynamics_sim.
 $(EXNAME)_metropolis: $(EXNAME)_metropolis.o $(INCLUDE)/random.o metropolis_NVT.o $(INCLUDE)/statistics.hh
 	$(CC) $^ -o $@
 
+all: $(EXNAME)_verlet $(EXNAME)_metropolis
+
 clean:
-	rm *.o $(EXNAME) seed.out
+	rm *.o $(EXNAME)_verlet $(EXNAME)_metropolis seed.out
