[5] Add study of the equilibration time
Using the "raw" (non data-blocked) data generated by the algorithm, I
made a guess at its equilibration time in the notebook.

--- a/exercise05/makefile
+++ b/exercise05/makefile
@@ -4,7 +4,8 @@ INCLUDE = $(SRCDIR)/include
 CFLAGS = -Wall -O3 --std=c++11 -I$(INCLUDE)
 EXNAME = exercise05
 
-.PHONY: clean
+.PHONY: clean, all
+.DEFAULT_GOAL := all
 
 %.o: %.cc
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -12,5 +13,10 @@ EXNAME = exercise05
 $(EXNAME): $(EXNAME).o $(INCLUDE)/random.o $(INCLUDE)/statistics.hh
 	$(CC) $^ -o $@
 
+$(EXNAME)_raw: $(EXNAME)_raw.o $(INCLUDE)/random.o $(INCLUDE)/statistics.hh
+	$(CC) $^ -o $@
+
+all: $(EXNAME) $(EXNAME)_raw
+
 clean:
-	rm *.o $(EXNAME) seed.out
+	rm *.o $(EXNAME) $(EXNAME)_raw seed.out
