[5] Analyse autocorrelation of the samples
After having equilibrated the system, I showed a plot of the sampled
radius in the four cases, for each of the two predefined initial
conditions.
Then I fitted the data with an expontential function to calculate the
autocorrelation length.

--- a/exercise05/makefile
+++ b/exercise05/makefile
@@ -16,7 +16,10 @@ $(EXNAME): $(EXNAME).o $(INCLUDE)/random.o $(INCLUDE)/statistics.hh
 $(EXNAME)_raw: $(EXNAME)_raw.o $(INCLUDE)/random.o $(INCLUDE)/statistics.hh
 	$(CC) $^ -o $@
 
-all: $(EXNAME) $(EXNAME)_raw
+$(EXNAME)_raw_equilibrated: $(EXNAME)_raw_equilibrated.o $(INCLUDE)/random.o $(INCLUDE)/statistics.hh
+	$(CC) $^ -o $@
+
+all: $(EXNAME) $(EXNAME)_raw $(EXNAME)_raw_equilibrated
 
 clean:
-	rm *.o $(EXNAME) $(EXNAME)_raw seed.out
+	rm *.o $(EXNAME) $(EXNAME)_raw $(EXNAME)_raw_equilibrated seed.out
